--- a/data/apps/vocabs/config.toml
+++ b/data/apps/vocabs/config.toml
@@ -1,27 +1,27 @@
 [app]
 name="vocabs"
 title="CLARIAH Vocabulary Editor"
+def_prof="clarin.eu:cr1:p_1653377925723"
+
+[app.prof.vocab]
 prof="clarin.eu:cr1:p_1653377925723"
-
-[app.html]
 title="string(/cmd:CMD/cmd:Components/cmd:Vocabulary/cmd:title)"
+label_en="vocabulary"
+label_plural_en="vocabularies"
 
-[app.list]
-ns.cmd="http://www.clarin.eu/cmd/"
-
-[app.list.identifier]
+[app.prof.vocab.list.identifier]
 xpath="string(/cmd:CMD/cmd:Components/cmd:Vocabulary/cmd:identifier)"
 label="Identifier"
 sort="true"
 filter="true"
 
-[app.list.name]
+[app.prof.vocab.list.name]
 xpath="string(/cmd:CMD/cmd:Components/cmd:Vocabulary/cmd:title)"
 label="Name"
 sort="true"
 filter="true"
 
-[app.list.status]
+[app.prof.vocab.list.status]
 xpath="string(/cmd:CMD/cmd:Components/cmd:Vocabulary/cmd:status)"
 label="Status"
 sort="true"
