--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '2'
 
 services:
   sd-editor:
-    image: ghcr.io/knaw-huc/service-huc-editor:2.0-RC5
+    #image: ghcr.io/knaw-huc/service-huc-editor:2.0-RC5
+    image: service-huc-editor
     environment:
       - BASE_URL=http://localhost:1210
     volumes:
