--- a/data/apps/vocabs/config.toml
+++ b/data/apps/vocabs/config.toml
@@ -28,6 +28,18 @@ label="Status"
 sort="true"
 filter="'select'"
 
+[app.prof.vocab.list.downloadable]
+xpath="string(cmd:CMD/cmd:Components/cmd:Vocabulary/cmd:InternalCuration/cmd:Status[last()]/cmd:downloadable)"
+label="downloadable"
+sort="true"
+filter="'select'"
+
+[app.prof.vocab.list.registry]
+xpath="string(cmd:CMD/cmd:Components/cmd:Vocabulary/cmd:IsReferencedBy/cmd:Registry[last()]/cmd:title)"
+label="Registry"
+sort="true"
+filter="'select'"
+
 [app.prof.vocab.list.dateFrom]
 xpath="string(cmd:CMD/cmd:Components/cmd:Vocabulary/cmd:InternalCuration/cmd:Status[1]/cmd:dateFrom)"
 label="RecordCreated"
